# ecnhapi

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  pyproject.toml  styles.css
.github/workflows/: ci.yml
data/: api-ecosystem.json
docs/: API.md  ROADMAP.md  api-ecosystem-guide.md
src/: app.js
src/ecnhapi/: __init__.py  api.py  config.py  models.py  schemas.py  services.py
test/: validate-data.mjs
tests/: test_api.py  test_services.py
